[project]
name = "repcollect"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
rpt = "rpt:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["collectors*"]

[tool.setuptools]
py-modules = ["rpt"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
